--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <li><a href="#" class="header__link">首頁</a></li>
                 <li><a href="#" class="header__link">甜點</a></li>
                 <li><a href="#" class="header__link">登入</a></li>
-                <li><a href="#" class="header__link"><img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/shopping_cart.png?raw=true" alt="shopping_car"></a></li>
+                <li><a href="#" class="header__link shopping_car"><img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/shopping_cart.png?raw=true" alt="shopping_car"></a></li>
             </ul>
         </div>
         <div class="banner">
@@ -24,7 +24,7 @@
             <div class="content__dessert">
                 <ul class="content__menu">
                     <li class="content__menuItem content__menuItem--title">甜點類別</li>
-                    <li><a href="#" class="content__menuItem content__menuItem--select">所有甜點(48)</a></li>
+                    <li><a href="#" class="content__menuItem">所有甜點(48)</a></li>
                     <li><a href="#" class="content__menuItem">本日精選(10)</a></li>
                     <li><a href="#" class="content__menuItem">人氣推薦(26)</a></li>
                     <li><a href="#" class="content__menuItem">新品上市(12)</a></li>
@@ -34,7 +34,7 @@
                         <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/p-1.png?raw=true" alt="dessert" class="content__img">
                         <span class="content__tag">本日精選</span>
                         <div class="content__text">
-                            <p>焦糖馬卡龍</p>
+                            <h3>焦糖馬卡龍</h3>
                             <p>NT$ 450</p>
                         </div>
                         <a href="#" class="content__add">加入購物車</a>
@@ -43,7 +43,7 @@
                         <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/p-2.png?raw=true" alt="dessert" class="content__img">
                         <span class="content__tag">本日精選</span>
                         <div class="content__text">
-                            <p>焦糖馬卡龍</p>
+                            <h3>焦糖馬卡龍</h3>
                             <p>NT$ 450</p>
                         </div>
                         <a href="#" class="content__add">加入購物車</a>
@@ -52,7 +52,7 @@
                         <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/p-3.png?raw=true" alt="dessert" class="content__img">
                         <span class="content__tag">本日精選</span>
                         <div class="content__text">
-                            <p>焦糖馬卡龍</p>
+                            <h3>焦糖馬卡龍</h3>
                             <p>NT$ 450</p>
                         </div>
                         <a href="#" class="content__add">加入購物車</a>
@@ -61,7 +61,7 @@
                         <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/p-4.png?raw=true" alt="dessert" class="content__img">
                         <span class="content__tag">本日精選</span>
                         <div class="content__text">
-                            <p>焦糖馬卡龍</p>
+                            <h3>焦糖馬卡龍</h3>
                             <p>NT$ 450</p>
                         </div>
                         <a href="#" class="content__add">加入購物車</a>
@@ -70,7 +70,7 @@
                         <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/p-5.png?raw=true" alt="dessert" class="content__img">
                         <span class="content__tag">本日精選</span>
                         <div class="content__text">
-                            <p>焦糖馬卡龍</p>
+                            <h3>焦糖馬卡龍</h3>
                             <p>NT$ 450</p>
                         </div>
                         <a href="#" class="content__add">加入購物車</a>
@@ -79,7 +79,7 @@
                         <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/p-6.png?raw=true" alt="dessert" class="content__img">
                         <span class="content__tag">本日精選</span>
                         <div class="content__text">
-                            <p>焦糖馬卡龍</p>
+                            <h3>焦糖馬卡龍</h3>
                             <p>NT$ 450</p>
                         </div>
                         <a href="#" class="content__add">加入購物車</a>
